# meshtastic_control

./: MANIFEST.in  README.md  main.py  pyproject.toml
backend/: mesh.py
