[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic-control"
version = "0.1.0"
description = "Minimalist Meshtastic Client Terminal for Linux and Windows"
authors = [
  {name = "Luis Zambrana / surc.ar"}
]

dependencies = [
  "textual",
  "meshtastic",
  "pyserial",
  "pypubsub"
]

[tool.setuptools]
py-modules = ["main"]

[project.scripts]
meshcontrol = "main:run"